// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`allScoredKeepDiscardsByScoreDescending five card deal order deal 1`] = `
[
  {
    "discard": [
      {
        "count": 4,
        "rank": 3,
        "rankLabel": "4",
        "suit": "♠",
      },
      {
        "count": 3,
        "rank": 2,
        "rankLabel": "3",
        "suit": "♥",
      },
    ],
    "expectedHandPoints": 5.74468085106383,
    "expectedNetPoints": 10.46644255319149,
    "expectedPlayPoints": {
      "dealer": {
        "pointBreakdown": {
          "fifteens": 0,
          "go": 0,
          "lastCard": 0,
          "pairs": 0,
          "runs": 0,
          "thirtyOnes": 0,
        },
        "total": 0,
      },
      "delta": 0,
      "pone": {
        "pointBreakdown": {
          "fifteens": 0,
          "go": 0,
          "lastCard": 0,
          "pairs": 0,
          "runs": 0,
          "thirtyOnes": 0,
        },
        "total": 0,
      },
    },
    "handPoints": 4,
    "keep": [
      {
        "count": 10,
        "rank": 9,
        "rankLabel": "10",
        "suit": "♦",
      },
      {
        "count": 10,
        "rank": 10,
        "rankLabel": "J",
        "suit": "♥",
      },
      {
        "count": 5,
        "rank": 4,
        "rankLabel": "5",
        "suit": "♣",
      },
    ],
    "signedExpectedCribPoints": 4.72176170212766,
  },
  {
    "discard": [
      {
        "count": 10,
        "rank": 10,
        "rankLabel": "J",
        "suit": "♥",
      },
      {
        "count": 10,
        "rank": 9,
        "rankLabel": "10",
        "suit": "♦",
      },
    ],
    "expectedHandPoints": 5.36170212765957,
    "expectedNetPoints": 9.7936085106383,
    "expectedPlayPoints": {
      "dealer": {
        "pointBreakdown": {
          "fifteens": 0,
          "go": 0,
          "lastCard": 0,
          "pairs": 0,
          "runs": 0,
          "thirtyOnes": 0,
        },
        "total": 0,
      },
      "delta": 0,
      "pone": {
        "pointBreakdown": {
          "fifteens": 0,
          "go": 0,
          "lastCard": 0,
          "pairs": 0,
          "runs": 0,
          "thirtyOnes": 0,
        },
        "total": 0,
      },
    },
    "handPoints": 3,
    "keep": [
      {
        "count": 3,
        "rank": 2,
        "rankLabel": "3",
        "suit": "♥",
      },
      {
        "count": 5,
        "rank": 4,
        "rankLabel": "5",
        "suit": "♣",
      },
      {
        "count": 4,
        "rank": 3,
        "rankLabel": "4",
        "suit": "♠",
      },
    ],
    "signedExpectedCribPoints": 4.43190638297872,
  },
  {
    "discard": [
      {
        "count": 10,
        "rank": 10,
        "rankLabel": "J",
        "suit": "♥",
      },
      {
        "count": 5,
        "rank": 4,
        "rankLabel": "5",
        "suit": "♣",
      },
    ],
    "expectedHandPoints": 1.46808510638298,
    "expectedNetPoints": 8.39786595744681,
    "expectedPlayPoints": {
      "dealer": {
        "pointBreakdown": {
          "fifteens": 0,
          "go": 0,
          "lastCard": 0,
          "pairs": 0,
          "runs": 0,
          "thirtyOnes": 0,
        },
        "total": 0,
      },
      "delta": 0,
      "pone": {
        "pointBreakdown": {
          "fifteens": 0,
          "go": 0,
          "lastCard": 0,
          "pairs": 0,
          "runs": 0,
          "thirtyOnes": 0,
        },
        "total": 0,
      },
    },
    "handPoints": 0,
    "keep": [
      {
        "count": 10,
        "rank": 9,
        "rankLabel": "10",
        "suit": "♦",
      },
      {
        "count": 3,
        "rank": 2,
        "rankLabel": "3",
        "suit": "♥",
      },
      {
        "count": 4,
        "rank": 3,
        "rankLabel": "4",
        "suit": "♠",
      },
    ],
    "signedExpectedCribPoints": 6.92978085106383,
  },
  {
    "discard": [
      {
        "count": 10,
        "rank": 9,
        "rankLabel": "10",
        "suit": "♦",
      },
      {
        "count": 5,
        "rank": 4,
        "rankLabel": "5",
        "suit": "♣",
      },
    ],
    "expectedHandPoints": 1.46808510638298,
    "expectedNetPoints": 8.0512,
    "expectedPlayPoints": {
      "dealer": {
        "pointBreakdown": {
          "fifteens": 0,
          "go": 0,
          "lastCard": 0,
          "pairs": 0,
          "runs": 0,
          "thirtyOnes": 0,
        },
        "total": 0,
      },
      "delta": 0,
      "pone": {
        "pointBreakdown": {
          "fifteens": 0,
          "go": 0,
          "lastCard": 0,
          "pairs": 0,
          "runs": 0,
          "thirtyOnes": 0,
        },
        "total": 0,
      },
    },
    "handPoints": 0,
    "keep": [
      {
        "count": 3,
        "rank": 2,
        "rankLabel": "3",
        "suit": "♥",
      },
      {
        "count": 10,
        "rank": 10,
        "rankLabel": "J",
        "suit": "♥",
      },
      {
        "count": 4,
        "rank": 3,
        "rankLabel": "4",
        "suit": "♠",
      },
    ],
    "signedExpectedCribPoints": 6.58311489361702,
  },
  {
    "discard": [
      {
        "count": 5,
        "rank": 4,
        "rankLabel": "5",
        "suit": "♣",
      },
      {
        "count": 4,
        "rank": 3,
        "rankLabel": "4",
        "suit": "♠",
      },
    ],
    "expectedHandPoints": 1.48936170212766,
    "expectedNetPoints": 7.86046595744681,
    "expectedPlayPoints": {
      "dealer": {
        "pointBreakdown": {
          "fifteens": 0,
          "go": 0,
          "lastCard": 0,
          "pairs": 0,
          "runs": 0,
          "thirtyOnes": 0,
        },
        "total": 0,
      },
      "delta": 0,
      "pone": {
        "pointBreakdown": {
          "fifteens": 0,
          "go": 0,
          "lastCard": 0,
          "pairs": 0,
          "runs": 0,
          "thirtyOnes": 0,
        },
        "total": 0,
      },
    },
    "handPoints": 0,
    "keep": [
      {
        "count": 10,
        "rank": 9,
        "rankLabel": "10",
        "suit": "♦",
      },
      {
        "count": 3,
        "rank": 2,
        "rankLabel": "3",
        "suit": "♥",
      },
      {
        "count": 10,
        "rank": 10,
        "rankLabel": "J",
        "suit": "♥",
      },
    ],
    "signedExpectedCribPoints": 6.37110425531915,
  },
  {
    "discard": [
      {
        "count": 10,
        "rank": 10,
        "rankLabel": "J",
        "suit": "♥",
      },
      {
        "count": 3,
        "rank": 2,
        "rankLabel": "3",
        "suit": "♥",
      },
    ],
    "expectedHandPoints": 3.8936170212766,
    "expectedNetPoints": 7.71304893617021,
    "expectedPlayPoints": {
      "dealer": {
        "pointBreakdown": {
          "fifteens": 0,
          "go": 0,
          "lastCard": 0,
          "pairs": 0,
          "runs": 0,
          "thirtyOnes": 0,
        },
        "total": 0,
      },
      "delta": 0,
      "pone": {
        "pointBreakdown": {
          "fifteens": 0,
          "go": 0,
          "lastCard": 0,
          "pairs": 0,
          "runs": 0,
          "thirtyOnes": 0,
        },
        "total": 0,
      },
    },
    "handPoints": 2,
    "keep": [
      {
        "count": 10,
        "rank": 9,
        "rankLabel": "10",
        "suit": "♦",
      },
      {
        "count": 5,
        "rank": 4,
        "rankLabel": "5",
        "suit": "♣",
      },
      {
        "count": 4,
        "rank": 3,
        "rankLabel": "4",
        "suit": "♠",
      },
    ],
    "signedExpectedCribPoints": 3.81943191489362,
  },
  {
    "discard": [
      {
        "count": 10,
        "rank": 10,
        "rankLabel": "J",
        "suit": "♥",
      },
      {
        "count": 4,
        "rank": 3,
        "rankLabel": "4",
        "suit": "♠",
      },
    ],
    "expectedHandPoints": 3.63829787234043,
    "expectedNetPoints": 7.43697021276596,
    "expectedPlayPoints": {
      "dealer": {
        "pointBreakdown": {
          "fifteens": 0,
          "go": 0,
          "lastCard": 0,
          "pairs": 0,
          "runs": 0,
          "thirtyOnes": 0,
        },
        "total": 0,
      },
      "delta": 0,
      "pone": {
        "pointBreakdown": {
          "fifteens": 0,
          "go": 0,
          "lastCard": 0,
          "pairs": 0,
          "runs": 0,
          "thirtyOnes": 0,
        },
        "total": 0,
      },
    },
    "handPoints": 2,
    "keep": [
      {
        "count": 10,
        "rank": 9,
        "rankLabel": "10",
        "suit": "♦",
      },
      {
        "count": 3,
        "rank": 2,
        "rankLabel": "3",
        "suit": "♥",
      },
      {
        "count": 5,
        "rank": 4,
        "rankLabel": "5",
        "suit": "♣",
      },
    ],
    "signedExpectedCribPoints": 3.79867234042553,
  },
  {
    "discard": [
      {
        "count": 5,
        "rank": 4,
        "rankLabel": "5",
        "suit": "♣",
      },
      {
        "count": 3,
        "rank": 2,
        "rankLabel": "3",
        "suit": "♥",
      },
    ],
    "expectedHandPoints": 1.48936170212766,
    "expectedNetPoints": 7.40132978723404,
    "expectedPlayPoints": {
      "dealer": {
        "pointBreakdown": {
          "fifteens": 0,
          "go": 0,
          "lastCard": 0,
          "pairs": 0,
          "runs": 0,
          "thirtyOnes": 0,
        },
        "total": 0,
      },
      "delta": 0,
      "pone": {
        "pointBreakdown": {
          "fifteens": 0,
          "go": 0,
          "lastCard": 0,
          "pairs": 0,
          "runs": 0,
          "thirtyOnes": 0,
        },
        "total": 0,
      },
    },
    "handPoints": 0,
    "keep": [
      {
        "count": 10,
        "rank": 9,
        "rankLabel": "10",
        "suit": "♦",
      },
      {
        "count": 10,
        "rank": 10,
        "rankLabel": "J",
        "suit": "♥",
      },
      {
        "count": 4,
        "rank": 3,
        "rankLabel": "4",
        "suit": "♠",
      },
    ],
    "signedExpectedCribPoints": 5.91196808510638,
  },
  {
    "discard": [
      {
        "count": 10,
        "rank": 9,
        "rankLabel": "10",
        "suit": "♦",
      },
      {
        "count": 3,
        "rank": 2,
        "rankLabel": "3",
        "suit": "♥",
      },
    ],
    "expectedHandPoints": 3.8936170212766,
    "expectedNetPoints": 7.39947021276596,
    "expectedPlayPoints": {
      "dealer": {
        "pointBreakdown": {
          "fifteens": 0,
          "go": 0,
          "lastCard": 0,
          "pairs": 0,
          "runs": 0,
          "thirtyOnes": 0,
        },
        "total": 0,
      },
      "delta": 0,
      "pone": {
        "pointBreakdown": {
          "fifteens": 0,
          "go": 0,
          "lastCard": 0,
          "pairs": 0,
          "runs": 0,
          "thirtyOnes": 0,
        },
        "total": 0,
      },
    },
    "handPoints": 2,
    "keep": [
      {
        "count": 10,
        "rank": 10,
        "rankLabel": "J",
        "suit": "♥",
      },
      {
        "count": 5,
        "rank": 4,
        "rankLabel": "5",
        "suit": "♣",
      },
      {
        "count": 4,
        "rank": 3,
        "rankLabel": "4",
        "suit": "♠",
      },
    ],
    "signedExpectedCribPoints": 3.50585319148936,
  },
  {
    "discard": [
      {
        "count": 10,
        "rank": 9,
        "rankLabel": "10",
        "suit": "♦",
      },
      {
        "count": 4,
        "rank": 3,
        "rankLabel": "4",
        "suit": "♠",
      },
    ],
    "expectedHandPoints": 3.63829787234043,
    "expectedNetPoints": 7.11628510638298,
    "expectedPlayPoints": {
      "dealer": {
        "pointBreakdown": {
          "fifteens": 0,
          "go": 0,
          "lastCard": 0,
          "pairs": 0,
          "runs": 0,
          "thirtyOnes": 0,
        },
        "total": 0,
      },
      "delta": 0,
      "pone": {
        "pointBreakdown": {
          "fifteens": 0,
          "go": 0,
          "lastCard": 0,
          "pairs": 0,
          "runs": 0,
          "thirtyOnes": 0,
        },
        "total": 0,
      },
    },
    "handPoints": 2,
    "keep": [
      {
        "count": 3,
        "rank": 2,
        "rankLabel": "3",
        "suit": "♥",
      },
      {
        "count": 10,
        "rank": 10,
        "rankLabel": "J",
        "suit": "♥",
      },
      {
        "count": 5,
        "rank": 4,
        "rankLabel": "5",
        "suit": "♣",
      },
    ],
    "signedExpectedCribPoints": 3.47798723404255,
  },
]
`;

exports[`allScoredKeepDiscardsByScoreDescending four card deal order deal 1`] = `
[
  {
    "discard": [
      {
        "count": 10,
        "rank": 9,
        "rankLabel": "10",
        "suit": "♦",
      },
      {
        "count": 5,
        "rank": 4,
        "rankLabel": "5",
        "suit": "♣",
      },
    ],
    "expectedHandPoints": 0.54166666666667,
    "expectedNetPoints": 7.16545416666667,
    "expectedPlayPoints": {
      "dealer": {
        "pointBreakdown": {
          "fifteens": 0,
          "go": 0,
          "lastCard": 0,
          "pairs": 0,
          "runs": 0,
          "thirtyOnes": 0,
        },
        "total": 0,
      },
      "delta": 0,
      "pone": {
        "pointBreakdown": {
          "fifteens": 0,
          "go": 0,
          "lastCard": 0,
          "pairs": 0,
          "runs": 0,
          "thirtyOnes": 0,
        },
        "total": 0,
      },
    },
    "handPoints": 0,
    "keep": [
      {
        "count": 2,
        "rank": 1,
        "rankLabel": "2",
        "suit": "♦",
      },
      {
        "count": 8,
        "rank": 7,
        "rankLabel": "8",
        "suit": "♠",
      },
    ],
    "signedExpectedCribPoints": 6.6237875,
  },
  {
    "discard": [
      {
        "count": 8,
        "rank": 7,
        "rankLabel": "8",
        "suit": "♠",
      },
      {
        "count": 2,
        "rank": 1,
        "rankLabel": "2",
        "suit": "♦",
      },
    ],
    "expectedHandPoints": 3,
    "expectedNetPoints": 6.53771875,
    "expectedPlayPoints": {
      "dealer": {
        "pointBreakdown": {
          "fifteens": 0,
          "go": 0,
          "lastCard": 0,
          "pairs": 0,
          "runs": 0,
          "thirtyOnes": 0,
        },
        "total": 0,
      },
      "delta": 0,
      "pone": {
        "pointBreakdown": {
          "fifteens": 0,
          "go": 0,
          "lastCard": 0,
          "pairs": 0,
          "runs": 0,
          "thirtyOnes": 0,
        },
        "total": 0,
      },
    },
    "handPoints": 2,
    "keep": [
      {
        "count": 10,
        "rank": 9,
        "rankLabel": "10",
        "suit": "♦",
      },
      {
        "count": 5,
        "rank": 4,
        "rankLabel": "5",
        "suit": "♣",
      },
    ],
    "signedExpectedCribPoints": 3.53771875,
  },
  {
    "discard": [
      {
        "count": 5,
        "rank": 4,
        "rankLabel": "5",
        "suit": "♣",
      },
      {
        "count": 2,
        "rank": 1,
        "rankLabel": "2",
        "suit": "♦",
      },
    ],
    "expectedHandPoints": 0.79166666666667,
    "expectedNetPoints": 6.191075,
    "expectedPlayPoints": {
      "dealer": {
        "pointBreakdown": {
          "fifteens": 0,
          "go": 0,
          "lastCard": 0,
          "pairs": 0,
          "runs": 0,
          "thirtyOnes": 0,
        },
        "total": 0,
      },
      "delta": 0,
      "pone": {
        "pointBreakdown": {
          "fifteens": 0,
          "go": 0,
          "lastCard": 0,
          "pairs": 0,
          "runs": 0,
          "thirtyOnes": 0,
        },
        "total": 0,
      },
    },
    "handPoints": 0,
    "keep": [
      {
        "count": 10,
        "rank": 9,
        "rankLabel": "10",
        "suit": "♦",
      },
      {
        "count": 8,
        "rank": 7,
        "rankLabel": "8",
        "suit": "♠",
      },
    ],
    "signedExpectedCribPoints": 5.39940833333333,
  },
  {
    "discard": [
      {
        "count": 8,
        "rank": 7,
        "rankLabel": "8",
        "suit": "♠",
      },
      {
        "count": 5,
        "rank": 4,
        "rankLabel": "5",
        "suit": "♣",
      },
    ],
    "expectedHandPoints": 0.54166666666667,
    "expectedNetPoints": 5.95483958333333,
    "expectedPlayPoints": {
      "dealer": {
        "pointBreakdown": {
          "fifteens": 0,
          "go": 0,
          "lastCard": 0,
          "pairs": 0,
          "runs": 0,
          "thirtyOnes": 0,
        },
        "total": 0,
      },
      "delta": 0,
      "pone": {
        "pointBreakdown": {
          "fifteens": 0,
          "go": 0,
          "lastCard": 0,
          "pairs": 0,
          "runs": 0,
          "thirtyOnes": 0,
        },
        "total": 0,
      },
    },
    "handPoints": 0,
    "keep": [
      {
        "count": 10,
        "rank": 9,
        "rankLabel": "10",
        "suit": "♦",
      },
      {
        "count": 2,
        "rank": 1,
        "rankLabel": "2",
        "suit": "♦",
      },
    ],
    "signedExpectedCribPoints": 5.41317291666667,
  },
  {
    "discard": [
      {
        "count": 10,
        "rank": 9,
        "rankLabel": "10",
        "suit": "♦",
      },
      {
        "count": 8,
        "rank": 7,
        "rankLabel": "8",
        "suit": "♠",
      },
    ],
    "expectedHandPoints": 1,
    "expectedNetPoints": 4.7220375,
    "expectedPlayPoints": {
      "dealer": {
        "pointBreakdown": {
          "fifteens": 0,
          "go": 0,
          "lastCard": 0,
          "pairs": 0,
          "runs": 0,
          "thirtyOnes": 0,
        },
        "total": 0,
      },
      "delta": 0,
      "pone": {
        "pointBreakdown": {
          "fifteens": 0,
          "go": 0,
          "lastCard": 0,
          "pairs": 0,
          "runs": 0,
          "thirtyOnes": 0,
        },
        "total": 0,
      },
    },
    "handPoints": 0,
    "keep": [
      {
        "count": 2,
        "rank": 1,
        "rankLabel": "2",
        "suit": "♦",
      },
      {
        "count": 5,
        "rank": 4,
        "rankLabel": "5",
        "suit": "♣",
      },
    ],
    "signedExpectedCribPoints": 3.7220375,
  },
  {
    "discard": [
      {
        "count": 10,
        "rank": 9,
        "rankLabel": "10",
        "suit": "♦",
      },
      {
        "count": 2,
        "rank": 1,
        "rankLabel": "2",
        "suit": "♦",
      },
    ],
    "expectedHandPoints": 1.16666666666667,
    "expectedNetPoints": 4.62856875,
    "expectedPlayPoints": {
      "dealer": {
        "pointBreakdown": {
          "fifteens": 0,
          "go": 0,
          "lastCard": 0,
          "pairs": 0,
          "runs": 0,
          "thirtyOnes": 0,
        },
        "total": 0,
      },
      "delta": 0,
      "pone": {
        "pointBreakdown": {
          "fifteens": 0,
          "go": 0,
          "lastCard": 0,
          "pairs": 0,
          "runs": 0,
          "thirtyOnes": 0,
        },
        "total": 0,
      },
    },
    "handPoints": 0,
    "keep": [
      {
        "count": 8,
        "rank": 7,
        "rankLabel": "8",
        "suit": "♠",
      },
      {
        "count": 5,
        "rank": 4,
        "rankLabel": "5",
        "suit": "♣",
      },
    ],
    "signedExpectedCribPoints": 3.46190208333333,
  },
]
`;

exports[`allScoredKeepDiscardsByScoreDescending six card deal with rank ties 1`] = `
[
  {
    "discard": [
      {
        "count": 3,
        "rank": 2,
        "rankLabel": "3",
        "suit": "♦",
      },
      {
        "count": 2,
        "rank": 1,
        "rankLabel": "2",
        "suit": "♦",
      },
    ],
    "expectedHandPoints": 11.08695652173913,
    "expectedNetPoints": 19.50008260869565,
    "expectedPlayPoints": {
      "dealer": {
        "pointBreakdown": {
          "fifteens": 0.2126,
          "go": 0.2888,
          "lastCard": 0.6078,
          "pairs": 1.2843,
          "runs": 1.139,
          "thirtyOnes": 0.6205,
        },
        "total": 4.1531,
      },
      "delta": 1.676,
      "pone": {
        "pointBreakdown": {
          "fifteens": 0.2592,
          "go": 0.0208,
          "lastCard": 0.3484,
          "pairs": 0.6303,
          "runs": 1.0538,
          "thirtyOnes": 0.1645,
        },
        "total": 2.4771,
      },
    },
    "handPoints": 8,
    "keep": [
      {
        "count": 1,
        "rank": 0,
        "rankLabel": "A",
        "suit": "♥",
      },
      {
        "count": 1,
        "rank": 0,
        "rankLabel": "A",
        "suit": "♦",
      },
      {
        "count": 2,
        "rank": 1,
        "rankLabel": "2",
        "suit": "♥",
      },
      {
        "count": 3,
        "rank": 2,
        "rankLabel": "3",
        "suit": "♥",
      },
    ],
    "signedExpectedCribPoints": 6.73712608695652,
  },
  {
    "discard": [
      {
        "count": 3,
        "rank": 2,
        "rankLabel": "3",
        "suit": "♥",
      },
      {
        "count": 2,
        "rank": 1,
        "rankLabel": "2",
        "suit": "♥",
      },
    ],
    "expectedHandPoints": 11.08695652173913,
    "expectedNetPoints": 19.50008260869565,
    "expectedPlayPoints": {
      "dealer": {
        "pointBreakdown": {
          "fifteens": 0.2126,
          "go": 0.2888,
          "lastCard": 0.6078,
          "pairs": 1.2843,
          "runs": 1.139,
          "thirtyOnes": 0.6205,
        },
        "total": 4.1531,
      },
      "delta": 1.676,
      "pone": {
        "pointBreakdown": {
          "fifteens": 0.2592,
          "go": 0.0208,
          "lastCard": 0.3484,
          "pairs": 0.6303,
          "runs": 1.0538,
          "thirtyOnes": 0.1645,
        },
        "total": 2.4771,
      },
    },
    "handPoints": 8,
    "keep": [
      {
        "count": 1,
        "rank": 0,
        "rankLabel": "A",
        "suit": "♥",
      },
      {
        "count": 1,
        "rank": 0,
        "rankLabel": "A",
        "suit": "♦",
      },
      {
        "count": 2,
        "rank": 1,
        "rankLabel": "2",
        "suit": "♦",
      },
      {
        "count": 3,
        "rank": 2,
        "rankLabel": "3",
        "suit": "♦",
      },
    ],
    "signedExpectedCribPoints": 6.73712608695652,
  },
  {
    "discard": [
      {
        "count": 3,
        "rank": 2,
        "rankLabel": "3",
        "suit": "♥",
      },
      {
        "count": 2,
        "rank": 1,
        "rankLabel": "2",
        "suit": "♦",
      },
    ],
    "expectedHandPoints": 11.08695652173913,
    "expectedNetPoints": 19.42408695652174,
    "expectedPlayPoints": {
      "dealer": {
        "pointBreakdown": {
          "fifteens": 0.2126,
          "go": 0.2888,
          "lastCard": 0.6078,
          "pairs": 1.2843,
          "runs": 1.139,
          "thirtyOnes": 0.6205,
        },
        "total": 4.1531,
      },
      "delta": 1.676,
      "pone": {
        "pointBreakdown": {
          "fifteens": 0.2592,
          "go": 0.0208,
          "lastCard": 0.3484,
          "pairs": 0.6303,
          "runs": 1.0538,
          "thirtyOnes": 0.1645,
        },
        "total": 2.4771,
      },
    },
    "handPoints": 8,
    "keep": [
      {
        "count": 1,
        "rank": 0,
        "rankLabel": "A",
        "suit": "♥",
      },
      {
        "count": 1,
        "rank": 0,
        "rankLabel": "A",
        "suit": "♦",
      },
      {
        "count": 2,
        "rank": 1,
        "rankLabel": "2",
        "suit": "♥",
      },
      {
        "count": 3,
        "rank": 2,
        "rankLabel": "3",
        "suit": "♦",
      },
    ],
    "signedExpectedCribPoints": 6.66113043478261,
  },
  {
    "discard": [
      {
        "count": 3,
        "rank": 2,
        "rankLabel": "3",
        "suit": "♦",
      },
      {
        "count": 2,
        "rank": 1,
        "rankLabel": "2",
        "suit": "♥",
      },
    ],
    "expectedHandPoints": 11.08695652173913,
    "expectedNetPoints": 19.42408695652174,
    "expectedPlayPoints": {
      "dealer": {
        "pointBreakdown": {
          "fifteens": 0.2126,
          "go": 0.2888,
          "lastCard": 0.6078,
          "pairs": 1.2843,
          "runs": 1.139,
          "thirtyOnes": 0.6205,
        },
        "total": 4.1531,
      },
      "delta": 1.676,
      "pone": {
        "pointBreakdown": {
          "fifteens": 0.2592,
          "go": 0.0208,
          "lastCard": 0.3484,
          "pairs": 0.6303,
          "runs": 1.0538,
          "thirtyOnes": 0.1645,
        },
        "total": 2.4771,
      },
    },
    "handPoints": 8,
    "keep": [
      {
        "count": 1,
        "rank": 0,
        "rankLabel": "A",
        "suit": "♥",
      },
      {
        "count": 1,
        "rank": 0,
        "rankLabel": "A",
        "suit": "♦",
      },
      {
        "count": 2,
        "rank": 1,
        "rankLabel": "2",
        "suit": "♦",
      },
      {
        "count": 3,
        "rank": 2,
        "rankLabel": "3",
        "suit": "♥",
      },
    ],
    "signedExpectedCribPoints": 6.66113043478261,
  },
  {
    "discard": [
      {
        "count": 3,
        "rank": 2,
        "rankLabel": "3",
        "suit": "♦",
      },
      {
        "count": 1,
        "rank": 0,
        "rankLabel": "A",
        "suit": "♦",
      },
    ],
    "expectedHandPoints": 11.95652173913043,
    "expectedNetPoints": 17.66119130434783,
    "expectedPlayPoints": {
      "dealer": {
        "pointBreakdown": {
          "fifteens": 0.2094,
          "go": 0.2807,
          "lastCard": 0.6882,
          "pairs": 1.3163,
          "runs": 1.1113,
          "thirtyOnes": 0.524,
        },
        "total": 4.1299,
      },
      "delta": 1.5912,
      "pone": {
        "pointBreakdown": {
          "fifteens": 0.26,
          "go": 0.0743,
          "lastCard": 0.2762,
          "pairs": 0.6398,
          "runs": 1.0663,
          "thirtyOnes": 0.2222,
        },
        "total": 2.5388,
      },
    },
    "handPoints": 8,
    "keep": [
      {
        "count": 1,
        "rank": 0,
        "rankLabel": "A",
        "suit": "♥",
      },
      {
        "count": 2,
        "rank": 1,
        "rankLabel": "2",
        "suit": "♥",
      },
      {
        "count": 2,
        "rank": 1,
        "rankLabel": "2",
        "suit": "♦",
      },
      {
        "count": 3,
        "rank": 2,
        "rankLabel": "3",
        "suit": "♥",
      },
    ],
    "signedExpectedCribPoints": 4.11346956521739,
  },
  {
    "discard": [
      {
        "count": 3,
        "rank": 2,
        "rankLabel": "3",
        "suit": "♥",
      },
      {
        "count": 1,
        "rank": 0,
        "rankLabel": "A",
        "suit": "♥",
      },
    ],
    "expectedHandPoints": 11.95652173913043,
    "expectedNetPoints": 17.66119130434783,
    "expectedPlayPoints": {
      "dealer": {
        "pointBreakdown": {
          "fifteens": 0.2094,
          "go": 0.2807,
          "lastCard": 0.6882,
          "pairs": 1.3163,
          "runs": 1.1113,
          "thirtyOnes": 0.524,
        },
        "total": 4.1299,
      },
      "delta": 1.5912,
      "pone": {
        "pointBreakdown": {
          "fifteens": 0.26,
          "go": 0.0743,
          "lastCard": 0.2762,
          "pairs": 0.6398,
          "runs": 1.0663,
          "thirtyOnes": 0.2222,
        },
        "total": 2.5388,
      },
    },
    "handPoints": 8,
    "keep": [
      {
        "count": 1,
        "rank": 0,
        "rankLabel": "A",
        "suit": "♦",
      },
      {
        "count": 2,
        "rank": 1,
        "rankLabel": "2",
        "suit": "♥",
      },
      {
        "count": 2,
        "rank": 1,
        "rankLabel": "2",
        "suit": "♦",
      },
      {
        "count": 3,
        "rank": 2,
        "rankLabel": "3",
        "suit": "♦",
      },
    ],
    "signedExpectedCribPoints": 4.11346956521739,
  },
  {
    "discard": [
      {
        "count": 3,
        "rank": 2,
        "rankLabel": "3",
        "suit": "♥",
      },
      {
        "count": 1,
        "rank": 0,
        "rankLabel": "A",
        "suit": "♦",
      },
    ],
    "expectedHandPoints": 11.95652173913043,
    "expectedNetPoints": 17.63292173913044,
    "expectedPlayPoints": {
      "dealer": {
        "pointBreakdown": {
          "fifteens": 0.2094,
          "go": 0.2807,
          "lastCard": 0.6882,
          "pairs": 1.3163,
          "runs": 1.1113,
          "thirtyOnes": 0.524,
        },
        "total": 4.1299,
      },
      "delta": 1.5912,
      "pone": {
        "pointBreakdown": {
          "fifteens": 0.26,
          "go": 0.0743,
          "lastCard": 0.2762,
          "pairs": 0.6398,
          "runs": 1.0663,
          "thirtyOnes": 0.2222,
        },
        "total": 2.5388,
      },
    },
    "handPoints": 8,
    "keep": [
      {
        "count": 1,
        "rank": 0,
        "rankLabel": "A",
        "suit": "♥",
      },
      {
        "count": 2,
        "rank": 1,
        "rankLabel": "2",
        "suit": "♥",
      },
      {
        "count": 2,
        "rank": 1,
        "rankLabel": "2",
        "suit": "♦",
      },
      {
        "count": 3,
        "rank": 2,
        "rankLabel": "3",
        "suit": "♦",
      },
    ],
    "signedExpectedCribPoints": 4.0852,
  },
  {
    "discard": [
      {
        "count": 3,
        "rank": 2,
        "rankLabel": "3",
        "suit": "♦",
      },
      {
        "count": 1,
        "rank": 0,
        "rankLabel": "A",
        "suit": "♥",
      },
    ],
    "expectedHandPoints": 11.95652173913043,
    "expectedNetPoints": 17.63292173913044,
    "expectedPlayPoints": {
      "dealer": {
        "pointBreakdown": {
          "fifteens": 0.2094,
          "go": 0.2807,
          "lastCard": 0.6882,
          "pairs": 1.3163,
          "runs": 1.1113,
          "thirtyOnes": 0.524,
        },
        "total": 4.1299,
      },
      "delta": 1.5912,
      "pone": {
        "pointBreakdown": {
          "fifteens": 0.26,
          "go": 0.0743,
          "lastCard": 0.2762,
          "pairs": 0.6398,
          "runs": 1.0663,
          "thirtyOnes": 0.2222,
        },
        "total": 2.5388,
      },
    },
    "handPoints": 8,
    "keep": [
      {
        "count": 1,
        "rank": 0,
        "rankLabel": "A",
        "suit": "♦",
      },
      {
        "count": 2,
        "rank": 1,
        "rankLabel": "2",
        "suit": "♥",
      },
      {
        "count": 2,
        "rank": 1,
        "rankLabel": "2",
        "suit": "♦",
      },
      {
        "count": 3,
        "rank": 2,
        "rankLabel": "3",
        "suit": "♥",
      },
    ],
    "signedExpectedCribPoints": 4.0852,
  },
  {
    "discard": [
      {
        "count": 2,
        "rank": 1,
        "rankLabel": "2",
        "suit": "♦",
      },
      {
        "count": 1,
        "rank": 0,
        "rankLabel": "A",
        "suit": "♦",
      },
    ],
    "expectedHandPoints": 11.60869565217391,
    "expectedNetPoints": 17.25756304347826,
    "expectedPlayPoints": {
      "dealer": {
        "pointBreakdown": {
          "fifteens": 0.2272,
          "go": 0.3023,
          "lastCard": 0.6547,
          "pairs": 0.7486,
          "runs": 1.6824,
          "thirtyOnes": 0.6128,
        },
        "total": 4.228,
      },
      "delta": 1.7752,
      "pone": {
        "pointBreakdown": {
          "fifteens": 0.2531,
          "go": 0.0772,
          "lastCard": 0.3115,
          "pairs": 0.6095,
          "runs": 1.0481,
          "thirtyOnes": 0.1535,
        },
        "total": 2.4528,
      },
    },
    "handPoints": 8,
    "keep": [
      {
        "count": 1,
        "rank": 0,
        "rankLabel": "A",
        "suit": "♥",
      },
      {
        "count": 2,
        "rank": 1,
        "rankLabel": "2",
        "suit": "♥",
      },
      {
        "count": 3,
        "rank": 2,
        "rankLabel": "3",
        "suit": "♥",
      },
      {
        "count": 3,
        "rank": 2,
        "rankLabel": "3",
        "suit": "♦",
      },
    ],
    "signedExpectedCribPoints": 3.87366739130435,
  },
  {
    "discard": [
      {
        "count": 2,
        "rank": 1,
        "rankLabel": "2",
        "suit": "♥",
      },
      {
        "count": 1,
        "rank": 0,
        "rankLabel": "A",
        "suit": "♥",
      },
    ],
    "expectedHandPoints": 11.60869565217391,
    "expectedNetPoints": 17.25756304347826,
    "expectedPlayPoints": {
      "dealer": {
        "pointBreakdown": {
          "fifteens": 0.2272,
          "go": 0.3023,
          "lastCard": 0.6547,
          "pairs": 0.7486,
          "runs": 1.6824,
          "thirtyOnes": 0.6128,
        },
        "total": 4.228,
      },
      "delta": 1.7752,
      "pone": {
        "pointBreakdown": {
          "fifteens": 0.2531,
          "go": 0.0772,
          "lastCard": 0.3115,
          "pairs": 0.6095,
          "runs": 1.0481,
          "thirtyOnes": 0.1535,
        },
        "total": 2.4528,
      },
    },
    "handPoints": 8,
    "keep": [
      {
        "count": 1,
        "rank": 0,
        "rankLabel": "A",
        "suit": "♦",
      },
      {
        "count": 2,
        "rank": 1,
        "rankLabel": "2",
        "suit": "♦",
      },
      {
        "count": 3,
        "rank": 2,
        "rankLabel": "3",
        "suit": "♥",
      },
      {
        "count": 3,
        "rank": 2,
        "rankLabel": "3",
        "suit": "♦",
      },
    ],
    "signedExpectedCribPoints": 3.87366739130435,
  },
  {
    "discard": [
      {
        "count": 2,
        "rank": 1,
        "rankLabel": "2",
        "suit": "♥",
      },
      {
        "count": 1,
        "rank": 0,
        "rankLabel": "A",
        "suit": "♦",
      },
    ],
    "expectedHandPoints": 11.60869565217391,
    "expectedNetPoints": 17.20508695652174,
    "expectedPlayPoints": {
      "dealer": {
        "pointBreakdown": {
          "fifteens": 0.2272,
          "go": 0.3023,
          "lastCard": 0.6547,
          "pairs": 0.7486,
          "runs": 1.6824,
          "thirtyOnes": 0.6128,
        },
        "total": 4.228,
      },
      "delta": 1.7752,
      "pone": {
        "pointBreakdown": {
          "fifteens": 0.2531,
          "go": 0.0772,
          "lastCard": 0.3115,
          "pairs": 0.6095,
          "runs": 1.0481,
          "thirtyOnes": 0.1535,
        },
        "total": 2.4528,
      },
    },
    "handPoints": 8,
    "keep": [
      {
        "count": 1,
        "rank": 0,
        "rankLabel": "A",
        "suit": "♥",
      },
      {
        "count": 2,
        "rank": 1,
        "rankLabel": "2",
        "suit": "♦",
      },
      {
        "count": 3,
        "rank": 2,
        "rankLabel": "3",
        "suit": "♥",
      },
      {
        "count": 3,
        "rank": 2,
        "rankLabel": "3",
        "suit": "♦",
      },
    ],
    "signedExpectedCribPoints": 3.82119130434783,
  },
  {
    "discard": [
      {
        "count": 2,
        "rank": 1,
        "rankLabel": "2",
        "suit": "♦",
      },
      {
        "count": 1,
        "rank": 0,
        "rankLabel": "A",
        "suit": "♥",
      },
    ],
    "expectedHandPoints": 11.60869565217391,
    "expectedNetPoints": 17.20508695652174,
    "expectedPlayPoints": {
      "dealer": {
        "pointBreakdown": {
          "fifteens": 0.2272,
          "go": 0.3023,
          "lastCard": 0.6547,
          "pairs": 0.7486,
          "runs": 1.6824,
          "thirtyOnes": 0.6128,
        },
        "total": 4.228,
      },
      "delta": 1.7752,
      "pone": {
        "pointBreakdown": {
          "fifteens": 0.2531,
          "go": 0.0772,
          "lastCard": 0.3115,
          "pairs": 0.6095,
          "runs": 1.0481,
          "thirtyOnes": 0.1535,
        },
        "total": 2.4528,
      },
    },
    "handPoints": 8,
    "keep": [
      {
        "count": 1,
        "rank": 0,
        "rankLabel": "A",
        "suit": "♦",
      },
      {
        "count": 2,
        "rank": 1,
        "rankLabel": "2",
        "suit": "♥",
      },
      {
        "count": 3,
        "rank": 2,
        "rankLabel": "3",
        "suit": "♥",
      },
      {
        "count": 3,
        "rank": 2,
        "rankLabel": "3",
        "suit": "♦",
      },
    ],
    "signedExpectedCribPoints": 3.82119130434783,
  },
  {
    "discard": [
      {
        "count": 1,
        "rank": 0,
        "rankLabel": "A",
        "suit": "♥",
      },
      {
        "count": 1,
        "rank": 0,
        "rankLabel": "A",
        "suit": "♦",
      },
    ],
    "expectedHandPoints": 9.73913043478261,
    "expectedNetPoints": 16.72558260869565,
    "expectedPlayPoints": {
      "dealer": {
        "pointBreakdown": {
          "fifteens": 0.2866,
          "go": 0.3465,
          "lastCard": 0.6619,
          "pairs": 1.0826,
          "runs": 1.2913,
          "thirtyOnes": 0.2946,
        },
        "total": 3.9636,
      },
      "delta": 1.8554,
      "pone": {
        "pointBreakdown": {
          "fifteens": 0.2345,
          "go": 0.1962,
          "lastCard": 0.3168,
          "pairs": 0.302,
          "runs": 0.8629,
          "thirtyOnes": 0.1958,
        },
        "total": 2.1082,
      },
    },
    "handPoints": 4,
    "keep": [
      {
        "count": 2,
        "rank": 1,
        "rankLabel": "2",
        "suit": "♥",
      },
      {
        "count": 2,
        "rank": 1,
        "rankLabel": "2",
        "suit": "♦",
      },
      {
        "count": 3,
        "rank": 2,
        "rankLabel": "3",
        "suit": "♥",
      },
      {
        "count": 3,
        "rank": 2,
        "rankLabel": "3",
        "suit": "♦",
      },
    ],
    "signedExpectedCribPoints": 5.13105217391304,
  },
  {
    "discard": [
      {
        "count": 2,
        "rank": 1,
        "rankLabel": "2",
        "suit": "♥",
      },
      {
        "count": 2,
        "rank": 1,
        "rankLabel": "2",
        "suit": "♦",
      },
    ],
    "expectedHandPoints": 6.95652173913044,
    "expectedNetPoints": 14.0146347826087,
    "expectedPlayPoints": {
      "dealer": {
        "pointBreakdown": {
          "fifteens": 0.29,
          "go": 0.4729,
          "lastCard": 0.6035,
          "pairs": 1.1965,
          "runs": 0.6924,
          "thirtyOnes": 0.3537,
        },
        "total": 3.6089,
      },
      "delta": 1.6798,
      "pone": {
        "pointBreakdown": {
          "fifteens": 0.284,
          "go": 0.0312,
          "lastCard": 0.3594,
          "pairs": 0.3729,
          "runs": 0.7609,
          "thirtyOnes": 0.1208,
        },
        "total": 1.9292,
      },
    },
    "handPoints": 4,
    "keep": [
      {
        "count": 1,
        "rank": 0,
        "rankLabel": "A",
        "suit": "♥",
      },
      {
        "count": 1,
        "rank": 0,
        "rankLabel": "A",
        "suit": "♦",
      },
      {
        "count": 3,
        "rank": 2,
        "rankLabel": "3",
        "suit": "♥",
      },
      {
        "count": 3,
        "rank": 2,
        "rankLabel": "3",
        "suit": "♦",
      },
    ],
    "signedExpectedCribPoints": 5.37831304347826,
  },
  {
    "discard": [
      {
        "count": 3,
        "rank": 2,
        "rankLabel": "3",
        "suit": "♥",
      },
      {
        "count": 3,
        "rank": 2,
        "rankLabel": "3",
        "suit": "♦",
      },
    ],
    "expectedHandPoints": 6.43478260869565,
    "expectedNetPoints": 13.36381304347826,
    "expectedPlayPoints": {
      "dealer": {
        "pointBreakdown": {
          "fifteens": 0.1925,
          "go": 0.2781,
          "lastCard": 0.4597,
          "pairs": 1.0923,
          "runs": 0.6334,
          "thirtyOnes": 0.6572,
        },
        "total": 3.3132,
      },
      "delta": 1.3056,
      "pone": {
        "pointBreakdown": {
          "fifteens": 0.4266,
          "go": 0.0003,
          "lastCard": 0.4455,
          "pairs": 0.3823,
          "runs": 0.6445,
          "thirtyOnes": 0.1083,
        },
        "total": 2.0075,
      },
    },
    "handPoints": 4,
    "keep": [
      {
        "count": 1,
        "rank": 0,
        "rankLabel": "A",
        "suit": "♥",
      },
      {
        "count": 1,
        "rank": 0,
        "rankLabel": "A",
        "suit": "♦",
      },
      {
        "count": 2,
        "rank": 1,
        "rankLabel": "2",
        "suit": "♥",
      },
      {
        "count": 2,
        "rank": 1,
        "rankLabel": "2",
        "suit": "♦",
      },
    ],
    "signedExpectedCribPoints": 5.62343043478261,
  },
]
`;

exports[`allScoredKeepDiscardsByScoreDescending six card descending rank order deal 1`] = `
[
  {
    "discard": [
      {
        "count": 10,
        "rank": 11,
        "rankLabel": "Q",
        "suit": "♠",
      },
      {
        "count": 10,
        "rank": 10,
        "rankLabel": "J",
        "suit": "♥",
      },
    ],
    "expectedHandPoints": 9.71739130434783,
    "expectedNetPoints": 16.06428260869565,
    "expectedPlayPoints": {
      "dealer": {
        "pointBreakdown": {
          "fifteens": 0.8029,
          "go": 0.3368,
          "lastCard": 0.9156,
          "pairs": 0.8954,
          "runs": 0.5678,
          "thirtyOnes": 0.52,
        },
        "total": 4.0386,
      },
      "delta": 1.6515,
      "pone": {
        "pointBreakdown": {
          "fifteens": 0.3377,
          "go": 0.3487,
          "lastCard": 0.0642,
          "pairs": 0.956,
          "runs": 0.4245,
          "thirtyOnes": 0.2562,
        },
        "total": 2.3872,
      },
    },
    "handPoints": 7,
    "keep": [
      {
        "count": 10,
        "rank": 12,
        "rankLabel": "K",
        "suit": "♣",
      },
      {
        "count": 6,
        "rank": 5,
        "rankLabel": "6",
        "suit": "♦",
      },
      {
        "count": 5,
        "rank": 4,
        "rankLabel": "5",
        "suit": "♣",
      },
      {
        "count": 4,
        "rank": 3,
        "rankLabel": "4",
        "suit": "♠",
      },
    ],
    "signedExpectedCribPoints": 4.69539130434783,
  },
  {
    "discard": [
      {
        "count": 6,
        "rank": 5,
        "rankLabel": "6",
        "suit": "♦",
      },
      {
        "count": 4,
        "rank": 3,
        "rankLabel": "4",
        "suit": "♠",
      },
    ],
    "expectedHandPoints": 11.41304347826087,
    "expectedNetPoints": 15.45204347826087,
    "expectedPlayPoints": {
      "dealer": {
        "pointBreakdown": {
          "fifteens": 0.5091,
          "go": 0.4655,
          "lastCard": 0.9118,
          "pairs": 0.3591,
          "runs": 0.1068,
          "thirtyOnes": 0.2472,
        },
        "total": 2.5995,
      },
      "delta": 0.2988,
      "pone": {
        "pointBreakdown": {
          "fifteens": 0.466,
          "go": 0.7073,
          "lastCard": 0.0468,
          "pairs": 0.7635,
          "runs": 0.0355,
          "thirtyOnes": 0.2814,
        },
        "total": 2.3006,
      },
    },
    "handPoints": 9,
    "keep": [
      {
        "count": 10,
        "rank": 12,
        "rankLabel": "K",
        "suit": "♣",
      },
      {
        "count": 10,
        "rank": 11,
        "rankLabel": "Q",
        "suit": "♠",
      },
      {
        "count": 10,
        "rank": 10,
        "rankLabel": "J",
        "suit": "♥",
      },
      {
        "count": 5,
        "rank": 4,
        "rankLabel": "5",
        "suit": "♣",
      },
    ],
    "signedExpectedCribPoints": 3.7402,
  },
  {
    "discard": [
      {
        "count": 10,
        "rank": 12,
        "rankLabel": "K",
        "suit": "♣",
      },
      {
        "count": 10,
        "rank": 10,
        "rankLabel": "J",
        "suit": "♥",
      },
    ],
    "expectedHandPoints": 9.71739130434783,
    "expectedNetPoints": 15.25882391304348,
    "expectedPlayPoints": {
      "dealer": {
        "pointBreakdown": {
          "fifteens": 0.8046,
          "go": 0.3356,
          "lastCard": 0.9145,
          "pairs": 0.9328,
          "runs": 0.5488,
          "thirtyOnes": 0.5325,
        },
        "total": 4.0687,
      },
      "delta": 1.6718,
      "pone": {
        "pointBreakdown": {
          "fifteens": 0.3305,
          "go": 0.348,
          "lastCard": 0.0632,
          "pairs": 1.0186,
          "runs": 0.3879,
          "thirtyOnes": 0.2488,
        },
        "total": 2.3969,
      },
    },
    "handPoints": 7,
    "keep": [
      {
        "count": 10,
        "rank": 11,
        "rankLabel": "Q",
        "suit": "♠",
      },
      {
        "count": 6,
        "rank": 5,
        "rankLabel": "6",
        "suit": "♦",
      },
      {
        "count": 5,
        "rank": 4,
        "rankLabel": "5",
        "suit": "♣",
      },
      {
        "count": 4,
        "rank": 3,
        "rankLabel": "4",
        "suit": "♠",
      },
    ],
    "signedExpectedCribPoints": 3.86963260869565,
  },
  {
    "discard": [
      {
        "count": 10,
        "rank": 12,
        "rankLabel": "K",
        "suit": "♣",
      },
      {
        "count": 10,
        "rank": 11,
        "rankLabel": "Q",
        "suit": "♠",
      },
    ],
    "expectedHandPoints": 9.97826086956522,
    "expectedNetPoints": 14.97285652173913,
    "expectedPlayPoints": {
      "dealer": {
        "pointBreakdown": {
          "fifteens": 0.7965,
          "go": 0.3405,
          "lastCard": 0.9099,
          "pairs": 0.9414,
          "runs": 0.5935,
          "thirtyOnes": 0.5429,
        },
        "total": 4.1248,
      },
      "delta": 1.7235,
      "pone": {
        "pointBreakdown": {
          "fifteens": 0.3305,
          "go": 0.343,
          "lastCard": 0.0646,
          "pairs": 0.9966,
          "runs": 0.4279,
          "thirtyOnes": 0.2386,
        },
        "total": 2.4012,
      },
    },
    "handPoints": 7,
    "keep": [
      {
        "count": 10,
        "rank": 10,
        "rankLabel": "J",
        "suit": "♥",
      },
      {
        "count": 6,
        "rank": 5,
        "rankLabel": "6",
        "suit": "♦",
      },
      {
        "count": 5,
        "rank": 4,
        "rankLabel": "5",
        "suit": "♣",
      },
      {
        "count": 4,
        "rank": 3,
        "rankLabel": "4",
        "suit": "♠",
      },
    ],
    "signedExpectedCribPoints": 3.27109565217391,
  },
  {
    "discard": [
      {
        "count": 6,
        "rank": 5,
        "rankLabel": "6",
        "suit": "♦",
      },
      {
        "count": 5,
        "rank": 4,
        "rankLabel": "5",
        "suit": "♣",
      },
    ],
    "expectedHandPoints": 5.3695652173913,
    "expectedNetPoints": 11.70297173913044,
    "expectedPlayPoints": {
      "dealer": {
        "pointBreakdown": {
          "fifteens": 0.0438,
          "go": 0.2835,
          "lastCard": 0.9057,
          "pairs": 0.9074,
          "runs": 0.0886,
          "thirtyOnes": 0.2986,
        },
        "total": 2.5277,
      },
      "delta": -0.167,
      "pone": {
        "pointBreakdown": {
          "fifteens": 0.4006,
          "go": 0.9318,
          "lastCard": 0.0331,
          "pairs": 0.7445,
          "runs": 0.416,
          "thirtyOnes": 0.1688,
        },
        "total": 2.6947,
      },
    },
    "handPoints": 3,
    "keep": [
      {
        "count": 10,
        "rank": 12,
        "rankLabel": "K",
        "suit": "♣",
      },
      {
        "count": 10,
        "rank": 11,
        "rankLabel": "Q",
        "suit": "♠",
      },
      {
        "count": 10,
        "rank": 10,
        "rankLabel": "J",
        "suit": "♥",
      },
      {
        "count": 4,
        "rank": 3,
        "rankLabel": "4",
        "suit": "♠",
      },
    ],
    "signedExpectedCribPoints": 6.50040652173913,
  },
  {
    "discard": [
      {
        "count": 10,
        "rank": 12,
        "rankLabel": "K",
        "suit": "♣",
      },
      {
        "count": 4,
        "rank": 3,
        "rankLabel": "4",
        "suit": "♠",
      },
    ],
    "expectedHandPoints": 6.82608695652174,
    "expectedNetPoints": 11.4228152173913,
    "expectedPlayPoints": {
      "dealer": {
        "pointBreakdown": {
          "fifteens": 0.7945,
          "go": 0.3574,
          "lastCard": 0.92,
          "pairs": 0.6052,
          "runs": 0.1407,
          "thirtyOnes": 0.5366,
        },
        "total": 3.3544,
      },
      "delta": 1.075,
      "pone": {
        "pointBreakdown": {
          "fifteens": 0.4746,
          "go": 0.5286,
          "lastCard": 0.0472,
          "pairs": 0.8863,
          "runs": 0.0547,
          "thirtyOnes": 0.288,
        },
        "total": 2.2794,
      },
    },
    "handPoints": 4,
    "keep": [
      {
        "count": 10,
        "rank": 11,
        "rankLabel": "Q",
        "suit": "♠",
      },
      {
        "count": 10,
        "rank": 10,
        "rankLabel": "J",
        "suit": "♥",
      },
      {
        "count": 6,
        "rank": 5,
        "rankLabel": "6",
        "suit": "♦",
      },
      {
        "count": 5,
        "rank": 4,
        "rankLabel": "5",
        "suit": "♣",
      },
    ],
    "signedExpectedCribPoints": 3.52172826086957,
  },
  {
    "discard": [
      {
        "count": 10,
        "rank": 12,
        "rankLabel": "K",
        "suit": "♣",
      },
      {
        "count": 6,
        "rank": 5,
        "rankLabel": "6",
        "suit": "♦",
      },
    ],
    "expectedHandPoints": 7,
    "expectedNetPoints": 11.30071956521739,
    "expectedPlayPoints": {
      "dealer": {
        "pointBreakdown": {
          "fifteens": 0.6674,
          "go": 0.4688,
          "lastCard": 0.9442,
          "pairs": 0.9515,
          "runs": 0.286,
          "thirtyOnes": 0.2497,
        },
        "total": 3.5676,
      },
      "delta": 1.276,
      "pone": {
        "pointBreakdown": {
          "fifteens": 0.3463,
          "go": 0.5609,
          "lastCard": 0.0446,
          "pairs": 0.8411,
          "runs": 0.3448,
          "thirtyOnes": 0.1538,
        },
        "total": 2.2916,
      },
    },
    "handPoints": 4,
    "keep": [
      {
        "count": 10,
        "rank": 11,
        "rankLabel": "Q",
        "suit": "♠",
      },
      {
        "count": 10,
        "rank": 10,
        "rankLabel": "J",
        "suit": "♥",
      },
      {
        "count": 5,
        "rank": 4,
        "rankLabel": "5",
        "suit": "♣",
      },
      {
        "count": 4,
        "rank": 3,
        "rankLabel": "4",
        "suit": "♠",
      },
    ],
    "signedExpectedCribPoints": 3.02471956521739,
  },
  {
    "discard": [
      {
        "count": 10,
        "rank": 10,
        "rankLabel": "J",
        "suit": "♥",
      },
      {
        "count": 4,
        "rank": 3,
        "rankLabel": "4",
        "suit": "♠",
      },
    ],
    "expectedHandPoints": 6.30434782608696,
    "expectedNetPoints": 11.27447391304348,
    "expectedPlayPoints": {
      "dealer": {
        "pointBreakdown": {
          "fifteens": 0.8289,
          "go": 0.3455,
          "lastCard": 0.9109,
          "pairs": 0.5602,
          "runs": 0.1302,
          "thirtyOnes": 0.5606,
        },
        "total": 3.3364,
      },
      "delta": 1.1206,
      "pone": {
        "pointBreakdown": {
          "fifteens": 0.4597,
          "go": 0.542,
          "lastCard": 0.0542,
          "pairs": 0.8195,
          "runs": 0.0482,
          "thirtyOnes": 0.2922,
        },
        "total": 2.2158,
      },
    },
    "handPoints": 4,
    "keep": [
      {
        "count": 10,
        "rank": 12,
        "rankLabel": "K",
        "suit": "♣",
      },
      {
        "count": 10,
        "rank": 11,
        "rankLabel": "Q",
        "suit": "♠",
      },
      {
        "count": 6,
        "rank": 5,
        "rankLabel": "6",
        "suit": "♦",
      },
      {
        "count": 5,
        "rank": 4,
        "rankLabel": "5",
        "suit": "♣",
      },
    ],
    "signedExpectedCribPoints": 3.84952608695652,
  },
  {
    "discard": [
      {
        "count": 5,
        "rank": 4,
        "rankLabel": "5",
        "suit": "♣",
      },
      {
        "count": 4,
        "rank": 3,
        "rankLabel": "4",
        "suit": "♠",
      },
    ],
    "expectedHandPoints": 5.02173913043478,
    "expectedNetPoints": 11.23258913043478,
    "expectedPlayPoints": {
      "dealer": {
        "pointBreakdown": {
          "fifteens": 0.2022,
          "go": 0.4607,
          "lastCard": 0.8576,
          "pairs": 0.4926,
          "runs": 0.1034,
          "thirtyOnes": 0.3958,
        },
        "total": 2.5123,
      },
      "delta": -0.1285,
      "pone": {
        "pointBreakdown": {
          "fifteens": 0.6103,
          "go": 0.6325,
          "lastCard": 0.0827,
          "pairs": 0.8332,
          "runs": 0.0602,
          "thirtyOnes": 0.4218,
        },
        "total": 2.6408,
      },
    },
    "handPoints": 3,
    "keep": [
      {
        "count": 10,
        "rank": 12,
        "rankLabel": "K",
        "suit": "♣",
      },
      {
        "count": 10,
        "rank": 11,
        "rankLabel": "Q",
        "suit": "♠",
      },
      {
        "count": 10,
        "rank": 10,
        "rankLabel": "J",
        "suit": "♥",
      },
      {
        "count": 6,
        "rank": 5,
        "rankLabel": "6",
        "suit": "♦",
      },
    ],
    "signedExpectedCribPoints": 6.33935,
  },
  {
    "discard": [
      {
        "count": 10,
        "rank": 11,
        "rankLabel": "Q",
        "suit": "♠",
      },
      {
        "count": 4,
        "rank": 3,
        "rankLabel": "4",
        "suit": "♠",
      },
    ],
    "expectedHandPoints": 6.56521739130435,
    "expectedNetPoints": 11.17916956521739,
    "expectedPlayPoints": {
      "dealer": {
        "pointBreakdown": {
          "fifteens": 0.8048,
          "go": 0.3606,
          "lastCard": 0.9221,
          "pairs": 0.5788,
          "runs": 0.1265,
          "thirtyOnes": 0.536,
        },
        "total": 3.3287,
      },
      "delta": 1.0528,
      "pone": {
        "pointBreakdown": {
          "fifteens": 0.4635,
          "go": 0.5345,
          "lastCard": 0.0451,
          "pairs": 0.8846,
          "runs": 0.0674,
          "thirtyOnes": 0.2808,
        },
        "total": 2.2759,
      },
    },
    "handPoints": 4,
    "keep": [
      {
        "count": 10,
        "rank": 12,
        "rankLabel": "K",
        "suit": "♣",
      },
      {
        "count": 10,
        "rank": 10,
        "rankLabel": "J",
        "suit": "♥",
      },
      {
        "count": 6,
        "rank": 5,
        "rankLabel": "6",
        "suit": "♦",
      },
      {
        "count": 5,
        "rank": 4,
        "rankLabel": "5",
        "suit": "♣",
      },
    ],
    "signedExpectedCribPoints": 3.56115217391304,
  },
  {
    "discard": [
      {
        "count": 10,
        "rank": 10,
        "rankLabel": "J",
        "suit": "♥",
      },
      {
        "count": 6,
        "rank": 5,
        "rankLabel": "6",
        "suit": "♦",
      },
    ],
    "expectedHandPoints": 6.47826086956522,
    "expectedNetPoints": 11.02881956521739,
    "expectedPlayPoints": {
      "dealer": {
        "pointBreakdown": {
          "fifteens": 0.7103,
          "go": 0.483,
          "lastCard": 0.948,
          "pairs": 0.8532,
          "runs": 0.2571,
          "thirtyOnes": 0.2346,
        },
        "total": 3.4862,
      },
      "delta": 1.2256,
      "pone": {
        "pointBreakdown": {
          "fifteens": 0.3442,
          "go": 0.5806,
          "lastCard": 0.0411,
          "pairs": 0.8198,
          "runs": 0.334,
          "thirtyOnes": 0.1409,
        },
        "total": 2.2606,
      },
    },
    "handPoints": 4,
    "keep": [
      {
        "count": 10,
        "rank": 12,
        "rankLabel": "K",
        "suit": "♣",
      },
      {
        "count": 10,
        "rank": 11,
        "rankLabel": "Q",
        "suit": "♠",
      },
      {
        "count": 5,
        "rank": 4,
        "rankLabel": "5",
        "suit": "♣",
      },
      {
        "count": 4,
        "rank": 3,
        "rankLabel": "4",
        "suit": "♠",
      },
    ],
    "signedExpectedCribPoints": 3.32495869565217,
  },
  {
    "discard": [
      {
        "count": 10,
        "rank": 11,
        "rankLabel": "Q",
        "suit": "♠",
      },
      {
        "count": 6,
        "rank": 5,
        "rankLabel": "6",
        "suit": "♦",
      },
    ],
    "expectedHandPoints": 6.73913043478261,
    "expectedNetPoints": 10.94007391304348,
    "expectedPlayPoints": {
      "dealer": {
        "pointBreakdown": {
          "fifteens": 0.6846,
          "go": 0.4743,
          "lastCard": 0.9446,
          "pairs": 0.9134,
          "runs": 0.2758,
          "thirtyOnes": 0.2414,
        },
        "total": 3.5341,
      },
      "delta": 1.2089,
      "pone": {
        "pointBreakdown": {
          "fifteens": 0.3345,
          "go": 0.5715,
          "lastCard": 0.0425,
          "pairs": 0.8646,
          "runs": 0.3617,
          "thirtyOnes": 0.1505,
        },
        "total": 2.3252,
      },
    },
    "handPoints": 4,
    "keep": [
      {
        "count": 10,
        "rank": 12,
        "rankLabel": "K",
        "suit": "♣",
      },
      {
        "count": 10,
        "rank": 10,
        "rankLabel": "J",
        "suit": "♥",
      },
      {
        "count": 5,
        "rank": 4,
        "rankLabel": "5",
        "suit": "♣",
      },
      {
        "count": 4,
        "rank": 3,
        "rankLabel": "4",
        "suit": "♠",
      },
    ],
    "signedExpectedCribPoints": 2.99204347826087,
  },
  {
    "discard": [
      {
        "count": 10,
        "rank": 12,
        "rankLabel": "K",
        "suit": "♣",
      },
      {
        "count": 5,
        "rank": 4,
        "rankLabel": "5",
        "suit": "♣",
      },
    ],
    "expectedHandPoints": 2.34782608695652,
    "expectedNetPoints": 9.51757173913043,
    "expectedPlayPoints": {
      "dealer": {
        "pointBreakdown": {
          "fifteens": 0.2534,
          "go": 0.3825,
          "lastCard": 0.9388,
          "pairs": 1.1383,
          "runs": 0.2337,
          "thirtyOnes": 0.2672,
        },
        "total": 3.2138,
      },
      "delta": 0.5754,
      "pone": {
        "pointBreakdown": {
          "fifteens": 0.3694,
          "go": 0.6197,
          "lastCard": 0.0397,
          "pairs": 0.9317,
          "runs": 0.4012,
          "thirtyOnes": 0.2768,
        },
        "total": 2.6385,
      },
    },
    "handPoints": 0,
    "keep": [
      {
        "count": 10,
        "rank": 11,
        "rankLabel": "Q",
        "suit": "♠",
      },
      {
        "count": 10,
        "rank": 10,
        "rankLabel": "J",
        "suit": "♥",
      },
      {
        "count": 6,
        "rank": 5,
        "rankLabel": "6",
        "suit": "♦",
      },
      {
        "count": 4,
        "rank": 3,
        "rankLabel": "4",
        "suit": "♠",
      },
    ],
    "signedExpectedCribPoints": 6.59434565217391,
  },
  {
    "discard": [
      {
        "count": 10,
        "rank": 10,
        "rankLabel": "J",
        "suit": "♥",
      },
      {
        "count": 5,
        "rank": 4,
        "rankLabel": "5",
        "suit": "♣",
      },
    ],
    "expectedHandPoints": 1.82608695652174,
    "expectedNetPoints": 9.2557652173913,
    "expectedPlayPoints": {
      "dealer": {
        "pointBreakdown": {
          "fifteens": 0.2569,
          "go": 0.4441,
          "lastCard": 0.9473,
          "pairs": 0.9411,
          "runs": 0.2111,
          "thirtyOnes": 0.2346,
        },
        "total": 3.0351,
      },
      "delta": 0.5038,
      "pone": {
        "pointBreakdown": {
          "fifteens": 0.3665,
          "go": 0.5715,
          "lastCard": 0.0356,
          "pairs": 0.848,
          "runs": 0.4117,
          "thirtyOnes": 0.298,
        },
        "total": 2.5312,
      },
    },
    "handPoints": 0,
    "keep": [
      {
        "count": 10,
        "rank": 12,
        "rankLabel": "K",
        "suit": "♣",
      },
      {
        "count": 10,
        "rank": 11,
        "rankLabel": "Q",
        "suit": "♠",
      },
      {
        "count": 6,
        "rank": 5,
        "rankLabel": "6",
        "suit": "♦",
      },
      {
        "count": 4,
        "rank": 3,
        "rankLabel": "4",
        "suit": "♠",
      },
    ],
    "signedExpectedCribPoints": 6.92587826086956,
  },
  {
    "discard": [
      {
        "count": 10,
        "rank": 11,
        "rankLabel": "Q",
        "suit": "♠",
      },
      {
        "count": 5,
        "rank": 4,
        "rankLabel": "5",
        "suit": "♣",
      },
    ],
    "expectedHandPoints": 2.08695652173913,
    "expectedNetPoints": 9.2207347826087,
    "expectedPlayPoints": {
      "dealer": {
        "pointBreakdown": {
          "fifteens": 0.2565,
          "go": 0.3976,
          "lastCard": 0.9396,
          "pairs": 1.0749,
          "runs": 0.2116,
          "thirtyOnes": 0.2695,
        },
        "total": 3.1498,
      },
      "delta": 0.5805,
      "pone": {
        "pointBreakdown": {
          "fifteens": 0.3595,
          "go": 0.6112,
          "lastCard": 0.0408,
          "pairs": 0.8725,
          "runs": 0.4104,
          "thirtyOnes": 0.2749,
        },
        "total": 2.5692,
      },
    },
    "handPoints": 0,
    "keep": [
      {
        "count": 10,
        "rank": 12,
        "rankLabel": "K",
        "suit": "♣",
      },
      {
        "count": 10,
        "rank": 10,
        "rankLabel": "J",
        "suit": "♥",
      },
      {
        "count": 6,
        "rank": 5,
        "rankLabel": "6",
        "suit": "♦",
      },
      {
        "count": 4,
        "rank": 3,
        "rankLabel": "4",
        "suit": "♠",
      },
    ],
    "signedExpectedCribPoints": 6.55327826086957,
  },
]
`;

exports[`allScoredKeepDiscardsByScoreDescending three card deal order deal 1`] = `
[
  {
    "discard": [
      {
        "count": 10,
        "rank": 10,
        "rankLabel": "J",
        "suit": "♥",
      },
      {
        "count": 5,
        "rank": 4,
        "rankLabel": "5",
        "suit": "♣",
      },
    ],
    "expectedHandPoints": 0.12244897959184,
    "expectedNetPoints": 7.06820816326531,
    "expectedPlayPoints": {
      "dealer": {
        "pointBreakdown": {
          "fifteens": 0,
          "go": 0,
          "lastCard": 0,
          "pairs": 0,
          "runs": 0,
          "thirtyOnes": 0,
        },
        "total": 0,
      },
      "delta": 0,
      "pone": {
        "pointBreakdown": {
          "fifteens": 0,
          "go": 0,
          "lastCard": 0,
          "pairs": 0,
          "runs": 0,
          "thirtyOnes": 0,
        },
        "total": 0,
      },
    },
    "handPoints": 0,
    "keep": [
      {
        "count": 4,
        "rank": 3,
        "rankLabel": "4",
        "suit": "♠",
      },
    ],
    "signedExpectedCribPoints": 6.94575918367347,
  },
  {
    "discard": [
      {
        "count": 5,
        "rank": 4,
        "rankLabel": "5",
        "suit": "♣",
      },
      {
        "count": 4,
        "rank": 3,
        "rankLabel": "4",
        "suit": "♠",
      },
    ],
    "expectedHandPoints": 0.24489795918367,
    "expectedNetPoints": 6.64604285714286,
    "expectedPlayPoints": {
      "dealer": {
        "pointBreakdown": {
          "fifteens": 0,
          "go": 0,
          "lastCard": 0,
          "pairs": 0,
          "runs": 0,
          "thirtyOnes": 0,
        },
        "total": 0,
      },
      "delta": 0,
      "pone": {
        "pointBreakdown": {
          "fifteens": 0,
          "go": 0,
          "lastCard": 0,
          "pairs": 0,
          "runs": 0,
          "thirtyOnes": 0,
        },
        "total": 0,
      },
    },
    "handPoints": 0,
    "keep": [
      {
        "count": 10,
        "rank": 10,
        "rankLabel": "J",
        "suit": "♥",
      },
    ],
    "signedExpectedCribPoints": 6.40114489795918,
  },
  {
    "discard": [
      {
        "count": 10,
        "rank": 10,
        "rankLabel": "J",
        "suit": "♥",
      },
      {
        "count": 4,
        "rank": 3,
        "rankLabel": "4",
        "suit": "♠",
      },
    ],
    "expectedHandPoints": 0.73469387755102,
    "expectedNetPoints": 4.53339387755102,
    "expectedPlayPoints": {
      "dealer": {
        "pointBreakdown": {
          "fifteens": 0,
          "go": 0,
          "lastCard": 0,
          "pairs": 0,
          "runs": 0,
          "thirtyOnes": 0,
        },
        "total": 0,
      },
      "delta": 0,
      "pone": {
        "pointBreakdown": {
          "fifteens": 0,
          "go": 0,
          "lastCard": 0,
          "pairs": 0,
          "runs": 0,
          "thirtyOnes": 0,
        },
        "total": 0,
      },
    },
    "handPoints": 0,
    "keep": [
      {
        "count": 5,
        "rank": 4,
        "rankLabel": "5",
        "suit": "♣",
      },
    ],
    "signedExpectedCribPoints": 3.7987,
  },
]
`;

exports[`allScoredKeepDiscardsByScoreDescending two card deal order deal 1`] = `
[
  {
    "discard": [
      {
        "count": 2,
        "rank": 1,
        "rankLabel": "2",
        "suit": "♦",
      },
      {
        "count": 1,
        "rank": 0,
        "rankLabel": "A",
        "suit": "♣",
      },
    ],
    "expectedHandPoints": 0,
    "expectedNetPoints": 4.090686,
    "expectedPlayPoints": {
      "dealer": {
        "pointBreakdown": {
          "fifteens": 0,
          "go": 0,
          "lastCard": 0,
          "pairs": 0,
          "runs": 0,
          "thirtyOnes": 0,
        },
        "total": 0,
      },
      "delta": 0,
      "pone": {
        "pointBreakdown": {
          "fifteens": 0,
          "go": 0,
          "lastCard": 0,
          "pairs": 0,
          "runs": 0,
          "thirtyOnes": 0,
        },
        "total": 0,
      },
    },
    "handPoints": 0,
    "keep": [],
    "signedExpectedCribPoints": 4.090686,
  },
]
`;
